--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,24 @@
-[package]
-name = "codespaces-blank"
-version = "0.1.0"
-edition = "2024"
+[workspace]
+members = [
+    "xs_core",
+    "parser",
+    "checker",
+    "interpreter",
+    "cli",
+]
+resolver = "2"
 
-[dependencies]
+[workspace.package]
+version = "0.1.0"
+edition = "2021"
+authors = ["XS Language Contributors"]
+
+[workspace.dependencies]
+xs_core = { path = "xs_core" }
+parser = { path = "parser" }
+checker = { path = "checker" }
+interpreter = { path = "interpreter" }
+thiserror = "1.0"
+anyhow = "1.0"
+clap = "4.5"
+colored = "2.1"
