docs: Update documentation and add performance benchmarks for new parser
- Update README.md and CLAUDE.md to show new Haskell-style syntax
- Replace S-expression examples with new syntax throughout docs
- Add comprehensive parser performance benchmarks
- Document benchmark results showing excellent performance:
  - Simple expressions: ~146ns
  - Complex functions: ~593ns
  - Nested blocks: ~2.4µs
  - Pattern matching: ~405ns
  - Pipeline operations: ~881ns
- Disable old S-expression benchmarks (to be updated later)

The new parser maintains high performance while providing more readable syntax.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -58,3 +58,7 @@ harness = false
 [[bench]]
 name = "type_checker_bench"
 harness = false
+
+[[bench]]
+name = "parser_performance"
+harness = false
